--- a/DXWebApplication/Views/Home/_PartialEmpGridView.cshtml
+++ b/DXWebApplication/Views/Home/_PartialEmpGridView.cshtml
@@ -75,6 +75,16 @@
     settings.SettingsBehavior.AllowFocusedRow = true;
 
     settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
+    settings.ClientSideEvents.EndCallback = "OnEndCallback";
+
+    settings.CustomJSProperties = (s, e) =>
+    {
+        if (ViewBag.ValidationErrors != null)
+        {
+            e.Properties["cpViewError"] = ViewBag.ValidationErrors;
+        }
+    };
+
     settings.Columns.Add(c =>
     {
         c.FieldName = "ACC_EMP_Number";
