--- a/DXWebApplication/Views/Home/_PartialEmpGridView.cshtml
+++ b/DXWebApplication/Views/Home/_PartialEmpGridView.cshtml
@@ -66,7 +66,7 @@
             });
             tb.Items.Add(i =>
             {
-                i.Text = "Popup";
+                i.Text = "Contract";
                 i.Name = "showPopupButton";
                 i.Command = GridViewToolbarCommand.Custom;
 
