js functions to enable batch

--- a/DXWebApplication/Views/Home/Employee.cshtml
+++ b/DXWebApplication/Views/Home/Employee.cshtml
@@ -38,6 +38,8 @@
             e.cancel = true;
     }
 
+
+
     function HRS_SAL_SalaryAmount_OnValueChange(s, e) {
 
         var salaryamount = s.GetValue();
@@ -158,3 +160,25 @@
 
 
 }).GetHtml()
+
+<script>
+
+
+
+
+    var rowIndex = 0;
+    function ContractBatch_OnBatchEditStartEditing(s, e) {
+        rowIndex = e.visibleIndex;
+
+
+    }
+
+    function ContractBatch_OnBatchEditRowInserting(s, e) {
+
+    }
+
+
+
+
+     
+</script>
