--- a/DXWebApplication/Views/Home/_PartialEmpcontractEditForm.cshtml
+++ b/DXWebApplication/Views/Home/_PartialEmpcontractEditForm.cshtml
@@ -10,7 +10,7 @@
     settings.Width = Unit.Percentage(100);
 
     settings.CallbackRouteValues = new { Controller = "Home", Action = "PartialEmpcontractEditForm" };
-    settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "Home", Action = "ContractBatchEditingUpdateModel" };
+    settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "Home", Action = "ContractBatchEditingUpdateModel", empid = ViewBag.empid };
 
     settings.SettingsEditing.Mode = GridViewEditingMode.Batch;
     settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
